--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "highlight.js": "^11.6.0",
+        "marked": "^4.0.18",
+        "vue-markdown-highlight": "^1.0.5"
     }
 }
