--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "ln -sr anycodings_laravel storage/app/public public/storage"
         ]
     },
     "extra": {
